cover image distortion fixed

--- a/pages/styles/blogpage.module.css
+++ b/pages/styles/blogpage.module.css
@@ -22,7 +22,13 @@
     cursor: pointer;
 }
 
-.imageWrapper{
+.imageWrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    min-height: 150px;
+}
+.coverImage{
     border-top-left-radius: 2rem;
     border-top-right-radius: 2rem;
 }
@@ -34,6 +40,7 @@
     border-bottom-left-radius: 2rem;
     border-bottom-right-radius: 2rem;
     text-align: left;
+    box-sizing: border-box;
 }
 .blogTitle{
     margin-top: 0;
